// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.toConsoleOutputMatchingSnapshot debug false: toConsoleOutputMatchingSnapshot:debug 1`] = `
Array [
  Array [
    "test: debug false",
  ],
]
`;

exports[`.toConsoleOutputMatchingSnapshot debug true: toConsoleOutputMatchingSnapshot:debug 1`] = `
Array [
  Array [
    "test: debug true",
  ],
]
`;

exports[`.toConsoleOutputMatchingSnapshot error false: toConsoleOutputMatchingSnapshot:error 1`] = `
Array [
  Array [
    "test: error false",
  ],
]
`;

exports[`.toConsoleOutputMatchingSnapshot error true: toConsoleOutputMatchingSnapshot:error 1`] = `
Array [
  Array [
    "test: error true",
  ],
]
`;

exports[`.toConsoleOutputMatchingSnapshot info false: toConsoleOutputMatchingSnapshot:info 1`] = `
Array [
  Array [
    "test: info false",
  ],
]
`;

exports[`.toConsoleOutputMatchingSnapshot info true: toConsoleOutputMatchingSnapshot:info 1`] = `
Array [
  Array [
    "test: info true",
  ],
]
`;

exports[`.toConsoleOutputMatchingSnapshot log false: toConsoleOutputMatchingSnapshot:log 1`] = `
Array [
  Array [
    "test: log false",
  ],
]
`;

exports[`.toConsoleOutputMatchingSnapshot log true: toConsoleOutputMatchingSnapshot:log 1`] = `
Array [
  Array [
    "test: log true",
  ],
]
`;

exports[`.toConsoleOutputMatchingSnapshot undefined false: toConsoleOutputMatchingSnapshot:log 1`] = `
Array [
  Array [
    "test: undefined false",
  ],
]
`;

exports[`.toConsoleOutputMatchingSnapshot undefined true: toConsoleOutputMatchingSnapshot:log 1`] = `
Array [
  Array [
    "test: undefined true",
  ],
]
`;

exports[`.toConsoleOutputMatchingSnapshot warn false: toConsoleOutputMatchingSnapshot:warn 1`] = `
Array [
  Array [
    "test: warn false",
  ],
]
`;

exports[`.toConsoleOutputMatchingSnapshot warn true: toConsoleOutputMatchingSnapshot:warn 1`] = `
Array [
  Array [
    "test: warn true",
  ],
]
`;
